samples/_failures_safe/1761004237_3bb4eb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_70b12a71.c: In function ‘handle_error_state’:
./samples/SAFE/__tmp_70b12a71.c:166:23: error: expected ‘;’ at end of input
  166 |     return STATE_ERROR
      |                       ^
      |                       ;
./samples/SAFE/__tmp_70b12a71.c:166:5: error: expected declaration or statement at end of input
  166 |     return STATE_ERROR
      |     ^~~~~~
